--- a/app/src/main/res/layout/activity_cursos.xml
+++ b/app/src/main/res/layout/activity_cursos.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".features.cursos.ActivityCursos">
+    tools:context=".features.cursos.CursosActivity">
 
     <FrameLayout
         android:id="@+id/cursos_lyt_barra"
