--- a/app/src/main/res/layout/fragment_agenda.xml
+++ b/app/src/main/res/layout/fragment_agenda.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".features.agenda.AgendaFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/agenda_rcv_tarjetero"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
+    </android.support.v7.widget.RecyclerView>
 </FrameLayout>
