--- a/app/src/main/res/layout/nav_header_activity_bar.xml
+++ b/app/src/main/res/layout/nav_header_activity_bar.xml
@@ -15,9 +15,10 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="90dp"
-        android:layout_height="79dp"
-        tools:srcCompat="@tools:sample/avatars[14]" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@android:string/ok"
+        android:src="@drawable/ic_person_black_24dp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -30,6 +31,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/menu_txt_codigo" />
+        android:text="@string/menu_txt_codigo"
+        android:textColor="#0C0808" />
 
 </LinearLayout>
