--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/home_lbl_email"
+            android:id="@+id/home_lbl_fullname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/home_lbl_email"
