colors and text preview

--- a/app/src/main/res/layout/fragment_agenda.xml
+++ b/app/src/main/res/layout/fragment_agenda.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".features.agenda.AgendaFragment">
+    tools:context=".features.agenda.AgendaFragment"
+    android:background="#F1E4F7">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/agenda_rcv_tarjetero"
