--- a/app/src/main/res/layout/fragment_cursos.xml
+++ b/app/src/main/res/layout/fragment_cursos.xml
@@ -3,34 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="50dp"
+    android:background="#F1E4F7"
     tools:context=".features.cursos.CursosFragment">
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:width="120dp"
-        android:background="#FFF2CC"
-        android:text="@string/curso_lbl_cursando"
-        android:textAlignment="center"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
-        android:width="120dp"
-        android:background="#FFD966"
-        android:text="@string/curso_lbl_dictando"
-        android:textAlignment="center"
-        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="50dp">
+
+        <TextView
+            android:id="@+id/curso_lbl_dictando"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="80dp"
+            android:width="120dp"
+            android:background="#FFD966"
+            android:text="@string/curso_lbl_dictando"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/curso_lbl_cursando"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:width="120dp"
+            android:background="#FFF2CC"
+            android:text="@string/curso_lbl_cursando"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"></LinearLayout>
 
 
