--- a/app/src/main/res/layout/content_activity_bar.xml
+++ b/app/src/main/res/layout/content_activity_bar.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".features.mainbar.BarActivity"
-    tools:showIn="@layout/app_bar_activity_bar">
+    tools:showIn="@layout/app_bar_activity_bar"
+    >
 
 </FrameLayout>
