--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F1E4F7"
     tools:context=".features.home.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -28,7 +29,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/home_lbl_fullname"
+            android:id="@+id/home_lbl_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/home_lbl_email"
